--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -1127,4 +1127,152 @@ body main #myTable_paginate a {
 }
 body main #myTable_paginate a:hover {
   background: #919eab;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #7d97f4;
+}
+.login__section {
+  width: 100%;
+  height: 100%;
+}
+.login__section__card {
+  display: flex;
+  flex-direction: column-reverse;
+  background-color: white;
+  margin: 20px 30px;
+  border-radius: 10px;
+  box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
+}
+@media screen and (min-width: 1224px) {
+  .login__section__card {
+    flex-direction: row;
+  }
+}
+.login__section__card__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 18px 12px;
+  color: rgba(138, 140, 145, 0.6274509804);
+}
+@media screen and (min-width: 376px) and (max-width: 1023px) {
+  .login__section__card__form {
+    align-items: flex-start;
+    margin: 20px auto;
+  }
+}
+@media screen and (min-width: 1224px) {
+  .login__section__card__form {
+    max-width: 40%;
+    height: 100%;
+    padding: 0px 200px;
+  }
+}
+.login__section__card__form h2 {
+  font-size: 35px;
+  font-weight: 900;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  color: #000000;
+  margin: 10px auto;
+  padding: 10px 0px;
+  outline: 5px solid rgba(125, 151, 244, 0.4784313725);
+}
+@media screen and (min-width: 376px) and (max-width: 1023px) {
+  .login__section__card__form h2 {
+    width: auto;
+    margin: 20px auto;
+    font-size: 50px;
+  }
+}
+@media screen and (min-width: 1224px) {
+  .login__section__card__form h2 {
+    font-size: 68px;
+    text-align: center;
+    margin: 100px auto 50px;
+  }
+}
+.login__section__card__form h3 {
+  color: #8a8c91;
+  font-size: 30px;
+  font-weight: 900;
+  font-family: "Inter", sans-serif;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 1224px) {
+  .login__section__card__form h3 {
+    text-align: left;
+    font-size: 60px;
+    margin-bottom: 50px;
+  }
+}
+.login__section__card__form #error {
+  width: 300px;
+  color: red;
+  font-size: 10px;
+}
+.login__section__card__form div {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin: auto;
+  padding: 10px 5px;
+}
+.login__section__card__form div label {
+  max-width: 100px;
+}
+.login__section__card__form div input:not(.submit) {
+  max-width: 300px;
+}
+.login__section__card__form div input[type=submit] {
+  display: flex;
+  width: 100px;
+  height: 20px;
+  justify-content: center;
+  font-weight: 600;
+  font-family: "Roboto", serif;
+  color: #000;
+  background-color: #fff;
+  border-color: #8a8c91;
+  border-radius: 5px;
+  margin: 0px auto 0px;
+}
+@media screen and (min-width: 376px) and (max-width: 1023px) {
+  .login__section__card__form div input[type=submit] {
+    margin: 5px auto 0px;
+  }
+}
+@media screen and (min-width: 1224px) {
+  .login__section__card__form div input[type=submit] {
+    width: 150px;
+    height: 50px;
+    margin: 50px auto 0px;
+  }
+}
+.login__section__card__form div input[type=submit]:hover {
+  background-color: #7d97f4;
+}
+.login__section__card__image {
+  width: 100%;
+  min-height: 350px;
+  background: url("../img/Workingwoman.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px 10px 0px 0px;
+}
+@media screen and (min-width: 1224px) {
+  .login__section__card__image {
+    width: 60%;
+    height: 650px;
+    border-radius: 0px 10px 10px 0px;
+  }
 }/*# sourceMappingURL=main.css.map */
