--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -557,6 +557,7 @@ body main .container__info__slogan__phone__square {
   }
 }
 body main .container__company__info {
+  color: black;
   display: flex;
   flex-direction: column;
 }
@@ -572,6 +573,7 @@ body main .container__company__info__name {
   position: relative;
 }
 body main .container__company__info__name h5 {
+  text-transform: uppercase;
   font-size: 30px;
   font-weight: 900;
   z-index: 1;
@@ -615,11 +617,15 @@ body main .container__company__info p {
     text-align: left;
   }
 }
+body main .container__company__info p span {
+  font-weight: 600;
+}
 body main .container__people {
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: black;
 }
 @media screen and (min-width: 1224px) {
   body main .container__people {
@@ -671,6 +677,7 @@ body main .container__people__info__card {
 @media screen and (min-width: 1224px) {
   body main .container__people__info__card {
     flex-direction: row;
+    flex-wrap: nowrap;
     height: 193px;
     width: 376px;
     border-radius: 32px;
@@ -680,6 +687,7 @@ body main .container__people__info__card {
   }
 }
 body main .container__people__info__card__photo {
+  flex: 1 1 50%;
   height: 90px;
   width: 90px;
   border-radius: 50%;
@@ -698,6 +706,7 @@ body main .container__people__info__card__photo img {
   border-radius: 50%;
 }
 body main .container__people__info__card__name {
+  flex: 1 1 50%;
   display: flex;
   flex-direction: column;
 }
@@ -1425,83 +1434,286 @@ body main #myTable_paginate a:hover {
 .dashboard {
   background-color: #e7e7e7;
 }
-.dashboard__header {
-  width: 100vw;
-  height: 189px;
-}
 @media screen and (min-width: 1224px) {
-  .dashboard__header {
-    width: 1044px;
-    height: 378px;
+  .dashboard {
+    display: flex;
+    flex-direction: row;
   }
 }
-.dashboard__header__first__part {
+.dashboard .nav__container {
+  background-color: #f5f5fb;
+  position: fixed;
+  z-index: 1;
+  top: 0px;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .nav__container {
+    position: initial;
+    z-index: initial;
+  }
+}
+.dashboard .nav__container .side__navbar {
   display: flex;
-  flex-direction: row;
-  height: 86px;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  background-color: #f5f5fb;
+  width: 250px;
+  height: 350.63px;
+  z-index: 1;
+  left: -250px;
+  padding: 10px 0;
 }
 @media screen and (min-width: 1224px) {
-  .dashboard__header__first__part {
-    height: 173px;
+  .dashboard .nav__container .side__navbar {
+    width: 285px;
+    justify-content: initial;
+    left: 0px;
+    height: 100vh;
   }
 }
-.dashboard__header__first__part__title h1 {
-  font-family: "Inter", sans-serif;
-  font-size: 30px;
-  font-weight: 900;
-  line-height: 36px;
+.dashboard .nav__container .side__navbar hr {
+  width: 100%;
+  height: 1px;
+  background: #e0e0e0;
+  opacity: 0.5;
 }
-.dashboard__header__first__part__title p {
-  font-family: "Inter", sans-serif;
-  font-size: 15px;
-  font-weight: 300;
-}
-.dashboard__header__first__part img {
-  height: 150px;
-}
-.dashboard__header__info {
+.dashboard .nav__container .side__navbar .user__profile {
   display: flex;
-  flex-direction: row;
-  background-color: #9698d6;
-  height: 103px;
-  color: white;
-  border-radius: 10px;
+  align-items: center;
+  flex-direction: column;
 }
 @media screen and (min-width: 1224px) {
-  .dashboard__header__info {
-    height: 206px;
+  .dashboard .nav__container .side__navbar .user__profile {
+    top: 32px;
   }
 }
-.dashboard__header__info__message h2 {
-  font-size: 35px;
-  font-family: "Inter", sans-serif;
-  font-weight: 300;
-}
-.dashboard__header__info__message p {
-  font-size: 15px;
-}
-.dashboard__sidebar__menu img {
-  width: 105px;
-  height: 105px;
+.dashboard .nav__container .side__navbar .user__profile img {
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
+  margin-bottom: 10px;
 }
-.dashboard__container__statistics {
-  width: 350px;
-  height: 500px;
-  background-color: #ffffff;
+.dashboard .nav__container .side__navbar .user__profile h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: 900;
 }
-.dashboard__container__invoices {
-  width: 350px;
-  height: 500px;
-  background-color: #ffffff;
+.dashboard .nav__container .side__navbar ul {
+  margin-left: auto;
+  margin-right: auto;
 }
-.dashboard__container__contacts {
-  width: 350px;
-  height: 500px;
-  background-color: #ffffff;
+.dashboard .nav__container .side__navbar ul li {
+  margin: 17px 0;
+  display: flex;
+  align-items: center;
 }
-.dashboard__container__company {
-  width: 350px;
-  height: 500px;
+.dashboard .nav__container .side__navbar ul li a {
+  text-decoration: none;
+  font-weight: 400;
+  color: #000000;
+}
+.dashboard .nav__container .side__navbar ul li img {
+  margin-right: 6px;
+}
+.dashboard .nav__container .side__navbar .user__footer svg {
+  display: none;
+}
+.dashboard .nav__container .side__navbar .user__footer .logout__button {
+  color: #9698d6;
+  border: none;
+  background: none;
+  margin-top: 5px;
+  right: 2px;
+}
+.dashboard .nav__container .active {
+  left: 0;
+}
+.dashboard .nav__container .close {
+  position: absolute;
+  top: 15px;
+  width: 45px;
+  height: 45px;
+  right: 15px;
+  font-size: 36px;
+  border: none;
+  background: none;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .nav__container .close {
+    display: none;
+  }
+}
+.dashboard .nav__container .close img {
+  width: 45px;
+  height: 45px;
+}
+.dashboard .nav__container .burger__icon {
+  position: fixed;
+  top: 0px;
+  width: 45px;
+  height: 45px;
+  background: none;
+  border: none;
+  margin: 6px 0;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .nav__container .burger__icon {
+    display: none;
+  }
+}
+.dashboard .nav__container .burger__icon img {
+  width: 45px;
+  height: 45px;
+}
+.dashboard .dashboard__header {
+  font-family: "Inter", sans-serif;
+}
+.dashboard .dashboard__header p {
+  font-weight: 300;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .dashboard__header {
+    width: 1044px;
+    height: 380px;
+    padding-left: 337px;
+  }
+}
+.dashboard .dashboard__header .title {
+  text-align: right;
+  padding-top: 10px;
+  padding-right: 10px;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .dashboard__header .title {
+    text-align: initial;
+  }
+}
+.dashboard .dashboard__header .title h2 {
+  font-size: 20px;
+  font-weight: 900;
+  color: #000000;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .dashboard__header .title h2 {
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+  }
+}
+.dashboard .dashboard__header .title p {
+  color: #000;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .dashboard__header .title p {
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    margin-bottom: 70px;
+  }
+}
+.dashboard .dashboard__header .title__description {
+  margin-left: 20px;
+  margin-right: auto;
+  text-align: center;
+  width: 320px;
+  height: 80px;
+  border-radius: 10px;
+  background: #9698d6;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .dashboard__header .title__description {
+    text-align: initial;
+    margin: none;
+    width: 1044px;
+    height: 206px;
+    flex-shrink: 0;
+  }
+}
+.dashboard .dashboard__header .title__description h2 {
+  font-size: 25px;
+  font-weight: 700;
+  padding-top: 7px;
+  color: #fff;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .dashboard__header .title__description h2 {
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding-left: 74px;
+    padding-top: 57px;
+  }
+}
+.dashboard .dashboard__header .title__description p {
+  font-size: 16px;
+  font-weight: 300;
+  padding-top: 4px;
+  color: #fff;
+}
+.dashboard .dashboard__header .svg {
+  width: 260px;
+  height: auto;
+}
+.dashboard .main__dashboard {
+  font-family: "Inter", sans-serif;
+  padding-top: 15px;
+  display: flex;
+}
+.dashboard .main__dashboard .container__main {
+  display: flex;
+  gap: 29px;
+  flex-direction: column;
+  padding: 60px 26px;
+}
+.dashboard .main__dashboard .container__main section {
   background-color: #ffffff;
+  border-radius: 10px;
+  min-height: 100px;
+  padding: 10px 15px;
+}
+.dashboard .main__dashboard .container__main section h3 {
+  font-weight: 700;
+}
+.dashboard .main__dashboard .container__main section hr {
+  background: #e0e0e0;
+  opacity: 0.5;
+}
+.dashboard .main__dashboard .container__main .statistics {
+  padding: 4px 24px;
+}
+.dashboard .main__dashboard .container__main .statistics h3 {
+  margin-bottom: 7px;
+}
+.dashboard .main__dashboard .container__main .statistics .number__container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.dashboard .main__dashboard .container__main .statistics .number__container div {
+  width: 74px;
+  height: 74px;
+  font-size: 13px;
+  margin-bottom: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: #ffffff;
+}
+.dashboard .main__dashboard .container__main .statistics .number__invoices {
+  background-color: #4d4cac;
+}
+.dashboard .main__dashboard .container__main .statistics .number__contacts {
+  background-color: #9698d6;
+}
+.dashboard .main__dashboard .container__main .statistics .number__companies {
+  background-color: #ff808b;
 }/*# sourceMappingURL=main.css.map */
